<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#6a6a6a"
    android:id="@+id/relativLayout_MainTab">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Workout Planner"
        android:id="@+id/lblTitle_MainTab"
        android:textSize="35dp"
        android:textColor="#ffffff"
        android:padding="8dp"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/gridLayout_MainTab" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblTitle_MainTab"
        android:layout_centerHorizontal="true"
        android:columnCount="2"
        android:rowCount="2"
        android:id="@+id/gridLayout_MainTab">

        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:tag="0"
            android:background="@drawable/layout_bg_frame1_maintab"
            android:layout_margin="20dp"
            android:id="@+id/frame1_MainTab"
            android:padding="3dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/workout_mainTab"
                android:id="@+id/lblWorkout_MainTab"
                android:textAlignment="center"
                android:textColor="#636363"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imgWorkout_MainTab"
                android:layout_below="@id/lblWorkout_MainTab"
                android:src="@drawable/dumbbell_lifter"
                android:layout_margin="2dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:tag="1"
            android:background="@drawable/layout_bg_frame2_maintab"
            android:layout_margin="20dp"
            android:id="@+id/frame2_MainTab"
            android:padding="3dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/plan_mainTab"
                android:id="@+id/lblPlan_MainTab"
                android:textAlignment="center"
                android:textColor="#636363"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imgPlan_MainTab"
                android:layout_below="@id/lblPlan_MainTab"
                android:src="@drawable/wedding_planning"
                android:layout_margin="2dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:tag="2"
            android:background="@drawable/layout_bg_frame3_maintab"
            android:layout_margin="20dp"
            android:id="@+id/fram3_MainTab"
            android:padding="3dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/you_mainTab"
                android:id="@+id/lblYou_MainTab"
                android:textAlignment="center"
                android:textColor="#636363"
                android:textSize="24dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imgYou_MainTab"
                android:layout_below="@id/lblYou_MainTab"
                android:src="@drawable/user_male_black_shape"
                android:layout_margin="2dp" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:tag="3"
            android:background="@drawable/layout_bg_frame4_maintab"
            android:layout_margin="20dp"
            android:id="@+id/fram4_MainTab"
            android:padding="3dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/success_mainTab"
                android:id="@+id/lblSuccess_MainTab"
                android:textAlignment="center"
                android:textColor="#636363"
                android:textSize="24dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imgSuccess_MainTab"
                android:layout_below="@id/lblSuccess_MainTab"
                android:src="@drawable/measure_success"
                android:layout_margin="2dp" />
        </RelativeLayout>

    </GridLayout>

</RelativeLayout>